--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
-
+    <meta name="google-site-verification" content="e02ObKWbCmQSqXzbeRhbraOrZwKMEgbkX6oGVdUI-dM" />
+    <meta name="google-site-verification" content="e02ObKWbCmQSqXzbeRhbraOrZwKMEgbkX6oGVdUI-dM" />
 </head>
 <body>
     <nav>
