--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="e02ObKWbCmQSqXzbeRhbraOrZwKMEgbkX6oGVdUI-dM" />
-    
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "hrufc8w9e2");
+    </script>
 </head>
 <body>
     <nav>
